--- a/divine_greating.html
+++ b/divine_greating.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salutation Divine</title>
+    <title>Divine Greating</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="assets/divine-greating.webp" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
